Fixed spacing on lists

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -60,10 +60,11 @@
 .smallList > li:before {
   content: "-  ";
   text-indent: -5px;
+  margin-left: 0.4rem;
 } 
 
 .smallListItem {
-  margin: 0 0 0.375rem 0.375rem;
+  margin: 0 0 0.375rem;
   padding-left: 0.4rem;
 }
 
